# 3d-icp-covariance

./: LICENSE.txt  README.md
C++/: CMakeLists.txt  data_bunny.pcd  model_bunny.pcd
C++/src/point_to_plane/: cbshot.h  cov_func_point_to_plane.h  loading_inputs_point_to_plane.cpp
C++/src/point_to_point/: cbshot.h  cov_func_point_to_point.h  loading_inputs_point_to_point.cpp
MatLab Scripts/: plane_to_plane_first_term.m  plane_to_plane_second_term.m  point_to_point_first_term.m  point_to_point_first_term.txt  point_to_point_second_term.m  point_to_point_second_term.txt
